--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,20 +6,30 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <p class="notice"><%= notice %></p>
 
   <body>
-    <%= yield %>
-  </body>
-  <!-- == alert container == -->
-      <div class="container">
-        <% flash.each do |key, value| %>
-          <div class="alert alert-<%= key %>">
-            <%= value %>
-          </div>
-        <% end %>
-      </div>
+    <!-- ======= menu bar =======  -->
+    <div id="menuBar">
+      <%= render :partial => '/photos/menu' %>
+    </div>
 
+    <!-- ======= menu bar =======  -->
+    <div id="yieldDiv">
+      <%= yield %>
+    </div>
+
+    <!-- == alert container == -->
+    <div class="container">
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>">
+          <%= value %>
+        </div>
+      <% end %>
+    </div>
+
+  </body>
 </html>
