menu bar 4 buttons

--- a/app/views/photos/_menu.html.erb
+++ b/app/views/photos/_menu.html.erb
@@ -4,11 +4,18 @@
     </a>
   </div>
 
-  <div id="newphoto_botton">
+  <div id="upload_botton">
     <button type="button">
       <%= link_to "New Photo", new_photo_path %>
     </button>
   </div>
+
+  <div id="profile_botton">
+    <button type="button">
+      <%= link_to "My Page", photos_path %>
+    </button>
+  </div>
+
 
   <div id="signout_botton">
     <button type="button">
