--- a/app/views/photos/home.html.erb
+++ b/app/views/photos/home.html.erb
@@ -1,2 +1,41 @@
 <!-- == section == -->
 <h1>Home</h1>
+
+<% @photos.each do |photo| %>
+
+  <div class="media">
+    <div class="media-left">
+        <%= link_to image_tag(photo.image.url, class: 'media-object'), photo.image.url, target: '_blank' %>
+    </div>
+    <div class="media-body">
+      <h4 class="media-heading"><%= photo.title %></h4>
+    </div>
+  </div>
+
+<% end %>
+
+<div id="contentBx">
+        <p id="feed">Live Feed:</p>
+        <div id="picCont">
+
+            <div id="userBx">
+
+            </div>
+
+            <div id="picBx">
+            </div>
+
+            <div id="picInfoBx">
+
+              <div id="titleBx">
+              </div>
+
+              <div id="like">
+              </div>
+
+            </div>
+
+            <div id="bodyBx">
+            </div>
+        </div>
+</div>
