home and profile set up

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,9 +1,20 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
+<div id="currentuserDisplay">
+  <%= @user.username %>
+</div>
+
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
+    <%= f.label :first_name %><br />
+    <%= f.text_field :fname %><br />
+    <%= f.label :last_name %><br />
+    <%= f.text_field :lname %><br />
+    <%= f.label :username %><br />
+    <%= f.text_field :username %><br />
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
