--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,12 @@
   <%= devise_error_messages! %>
 
   <div class="field">
+    <%= f.label :first_name %><br />
+    <%= f.text_field :fname %><br />
+    <%= f.label :last_name %><br />
+    <%= f.text_field :lname %><br />
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autofocus: true %><br />
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
