--- a/app/views/photos/home.html.erb
+++ b/app/views/photos/home.html.erb
@@ -2,18 +2,10 @@
 <h1>Home</h1>
 
 <% @photos.each do |photo| %>
-
-  <div class="media">
-    <div class="media-left">
-        <%= link_to image_tag(photo.image.url, class: 'media-object'), photo.image.url, target: '_blank' %>
-    </div>
-    <div class="media-body">
-      <h4 class="media-heading"><%= photo.title %></h4>
-    </div>
-  </div>
+  <%= link_to image_tag(@photo.image.url, class: 'media-object'), @photo.image.url, target: '_blank' %>
+  <%= photo.title %>
 
 <% end %>
-
 <div id="contentBx">
         <p id="feed">Live Feed:</p>
         <div id="picCont">
@@ -23,6 +15,7 @@
             </div>
 
             <div id="picBx">
+
             </div>
 
             <div id="picInfoBx">
