took out _dev folder

--- a/app/views/photos/_menu.html.erb
+++ b/app/views/photos/_menu.html.erb
@@ -19,7 +19,7 @@
   </div>
 
 
-  <div class="signout_botton">
+  <div id="signout_botton">
     <button type="button">
       <%= link_to "Sign out", destroy_user_session_path, :class => "allButtons", :method => :delete %>
     </button>
