--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,3 +1,39 @@
+/*======= ======= ======= Main Layout ======= ======= =======*/
+
+#yieldDiv {
+  border: 2px solid lightskyblue;
+}
+
+#menuBar {
+  border: 2px solid pink;
+  height: 50px;
+}
+
+.allButtons {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+/*======= ======= menuBar ====== =======*/
+#profile_botton {
+  float: left;
+}
+
+#home_botton {
+  float: left;
+}
+
+#upload_botton {
+  float: left;
+}
+
+#signout_botton {
+  float: right;
+}
+/*======= ======= BODY ====== =======*/
 #contentBx{
   border: 1px solid;
   height: auto;
