--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -55,3 +55,12 @@ button {
   height: 80px;
   width: 80px;
 }
+#picBx{
+  border: 1px solid;
+  height: 350px;
+  width: 100%;
+}
+.imgBxPic{
+  height: 350px;
+  width: 100%;
+}
