--- a/app/views/photos/home.html.erb
+++ b/app/views/photos/home.html.erb
@@ -13,7 +13,7 @@
             </div>
 
             <div id="picBx">
-              <%= link_to image_tag(photo.image.url), photo_path(current_user, photo) %>
+              <%= link_to image_tag(photo.image.url(:original), :class => "imgBxPic"), photo_path(current_user, photo) %>
             </div>
 
             <div id="picInfoBx">
