add tags controller

--- a/app/views/photos/_menu.html.erb
+++ b/app/views/photos/_menu.html.erb
@@ -4,13 +4,11 @@
     </a>
   </div>
 
-
   <div id="upload_botton">
     <a href="/photos/new">
       <button>New Photo</button>
     </a>
   </div>
-
 
   <div id="profile_botton">
     <a href="/photos">
@@ -18,6 +16,11 @@
     </a>
   </div>
 
+  <div id="explore_botton">
+    <a href="/explore">
+      <button>Explore</button>
+    </a>
+  </div>
 
   <div id="signout_botton">
     <button type="button">
