--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -16,15 +16,19 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: 'form-control'%>
+  </div>
+
+  <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, class: 'form-control' %>
   </div>
 
   <div class="form-group">
-    <%= f.label :image %>
-    <%= f.file_field :image, class: 'form-control'%>
+    <%= f.label :body %>
+    <%= f.text_area :body, class: 'form-control' %>
   </div>
-
 
   <%= f.submit 'Upload', class: 'btn btn-primary' %>
 <% end %>
