--- a/app/views/photos/home.html.erb
+++ b/app/views/photos/home.html.erb
@@ -28,6 +28,7 @@
             </div>
 
             <div id="bodyBx">
+              <%= photo.body %>
             </div>
         </div>
   <% end %>
