--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -38,17 +38,25 @@ button {
   border: 1px solid;
   height: auto;
   width: 100%;
-  text-align: left;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+}
+#verticalBX{
+height: auto;
+
+
 }
 #feed{
   float: left;
 }
 #picCont{
   border: 1px solid;
-  height: 500px;
+  height: 530px;
   width: 600px;
+  margin-top: 50px;
 }
 #userBx{
   border: 1px solid;
@@ -63,4 +71,83 @@ button {
 .imgBxPic{
   height: 350px;
   width: 100%;
+}
+#titleBx{
+  border: 1px solid;
+  height: 20px;
+  width: 60px;
+  float: left;
+}
+#like{
+  border: 1px solid;
+  height: 20px;
+  width: 20px;
+  float: right;
+}
+#bodyBx{
+  border: 1px solid;
+  height: 40px;
+  width: 100%;
+  float: left;
+}
+
+/*======= ======= photo:showpg ====== =======*/
+#contentBx1{
+  border: 1px solid;
+  height: auto;
+  width: 100%;
+}
+
+#picCont1{
+  border: 1px solid;
+  height: 530px;
+  width: 600px;
+  margin-top: 50px;
+  float: left;
+}
+#userBx1{
+  border: 1px solid;
+  height: 80px;
+  width: 80px;
+}
+#picBx1{
+  border: 1px solid;
+  height: 350px;
+  width: 100%;
+}
+.imgBxPic1{
+  height: 350px;
+  width: 100%;
+}
+#titleBx1{
+  border: 1px solid;
+  height: 20px;
+  width: 60px;
+  float: left;
+}
+#like1{
+  border: 1px solid;
+  height: 20px;
+  width: 20px;
+  float: right;
+}
+#bodyBx1{
+  border: 1px solid;
+  height: 40px;
+  width: 100%;
+  float: left;
+}
+#addComment{
+  float: right;
+}
+#showComment{
+  border: 1px solid;
+  height: 200px;
+  width: 50%;
+  margin-top: 20%;
+  float: right;
+  overflow: scroll;
+}
+#post{
+  border: 1px solid;
 }
