--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(comment) do |f| %>
+<%= form_for [@photo, @comment] do |f| %>
   <% if comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -12,6 +12,9 @@
   <% end %>
 
   <div class="actions">
+    <%= f.hidden_field :user_id, class: 'form-control' %>
+    <%= f.hidden_field :photo_id, class: 'form-control' %>
+    <%= f.text_area :body, class: 'form-control' %>
     <%= f.submit %>
   </div>
 <% end %>
