--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,4 +1,46 @@
 <p id="notice"><%= notice %></p>
 
 <%= link_to 'Edit', edit_photo_path(@photo) %> |
-<%= link_to 'Back', photos_path %>
+
+<div id="contentBx1">
+
+        <div id="picCont1">
+
+            <div id="userBx1">
+
+            </div>
+
+            <div id="picBx1">
+              <%= link_to image_tag(@photo.image.url(:original), :class => "imgBxPic1") %>
+            </div>
+
+            <div id="picInfoBx1">
+
+              <div id="titleBx1">
+                <%= @photo.title %>
+              </div>
+
+              <div id="like1">
+                <%= @photo.likes %>
+              </div>
+
+            </div>
+
+            <div id="bodyBx1">
+              <%= @photo.body %>
+            </div>
+
+            <p id="addComment"><%= link_to "Add Comment", new_photo_comment_path(photo_id: @photo) %></p>
+
+        </div>
+        <div id="showComment">
+          <% @comments.each do |f| %>
+            <div id="post">
+              <%= @user.username %>
+              <%= f.body %>
+              <%= f.created_at %><br>
+            </div>
+          <% end %>
+        </div>
+
+</div>
