--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -10,10 +10,10 @@
   </div>
 
 
-  <div class="form-group">
+  <!-- <div class="form-group">
     <%= f.label :content_type %>
     <%= f.text_field :content_type, class: 'form-control' %>
-  </div>
+  </div> -->
 
   <div class="form-group">
     <%= f.label :image %>
@@ -30,5 +30,11 @@
     <%= f.text_area :body, class: 'form-control' %>
   </div>
 
+  <div class="field">
+    <%= f.label :tag_list, "Tags (separated by commas)" %><br />
+    <%= f.text_field :tag_list %>
+  </div>
+
   <%= f.submit 'Upload', class: 'btn btn-primary' %>
+
 <% end %>
