--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -30,7 +30,7 @@
     <%= f.text_area :body, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :tag_list, "Tags (separated by commas)" %><br />
     <%= f.text_field :tag_list %>
   </div>
