--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,11 +1,8 @@
-<!-- == section == -->
-<h1>Home</h1>
-
+<p>INDEX</p>
 
 <div id="contentBx">
   <% @photos.each do |photo| %>
 
-        <p id="feed">Live Feed:</p>
         <div id="picCont">
 
             <div id="userBx">
