--- a/app/views/photos/_menu.html.erb
+++ b/app/views/photos/_menu.html.erb
@@ -33,10 +33,14 @@
     <%= button_tag "search" %>
   <% end %>
 
-  <div id="signout_botton">
+  <%= link_to destroy_user_session_path, class: "btn btn-secondary btn-xl", :method => :delete do %>
+      <i class="glyphicon glyphicon-log-out"></i>
+  <% end %>
+
+  <!-- <div id="signout_botton">
     <button type="button">
       <%= link_to "Sign out", destroy_user_session_path, :class => "glyphicon glyphicon-log-out", :method => :delete %>
     </button>
-  </div>
+  </div> -->
 
 <% end %>
