finished like button

--- a/app/views/photos/home.html.erb
+++ b/app/views/photos/home.html.erb
@@ -10,7 +10,7 @@
         <div id="picCont">
 
             <div id="userBx">
-
+              <p id="userText"><%= @user.username %></p>
             </div>
 
             <div id="picBx">
@@ -23,7 +23,7 @@
                 <%= photo.title %>
               </div>
 
-              <div id="like">
+              <div id="like">Like
               </div>
 
             </div>
