--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,11 +1,12 @@
 /*======= ======= ======= Main Layout ======= ======= =======*/
-
+body{
+  background:  #EBF4FA;
+}
 #yieldDiv {
-  border: 2px solid lightskyblue;
+/*  border: 2px solid lightskyblue;*/
 }
 
 #menuBar {
-  border: 2px solid pink;
   height: 50px;
 }
 
@@ -35,7 +36,7 @@ button {
 }
 /*======= ======= BODY ====== =======*/
 #contentBx{
-  border: 1px solid;
+/*  border: 1px solid;*/
   height: auto;
   width: 100%;
   display: flex;
@@ -53,40 +54,51 @@ height: auto;
   float: left;
 }
 #picCont{
-  border: 1px solid;
+  background: white;
+/*  border: 1px solid;*/
   height: 530px;
   width: 600px;
   margin-top: 50px;
 }
 #userBx{
-  border: 1px solid;
-  height: 80px;
+/*  border: 1px solid;*/
+  height: 30px;
   width: 80px;
+  margin-left: 5px;
+}
+#userText{
+  margin: 6px;
 }
 #picBx{
   border: 1px solid;
-  height: 350px;
+  height: 420px;
   width: 100%;
 }
 .imgBxPic{
-  height: 350px;
+  height: 420px;
   width: 100%;
 }
 #titleBx{
-  border: 1px solid;
+  background: white;
   height: 20px;
   width: 60px;
   float: left;
 }
 #like{
-  border: 1px solid;
+  background: white;
   height: 20px;
-  width: 20px;
+  width: 50px;
+  float: right;
+}
+#likeNum{
+  background: tan;
+  height: 20px;
+  width: 50px;
   float: right;
 }
 #bodyBx{
-  border: 1px solid;
-  height: 40px;
+/*  border: 1px solid;*/
+  height: 50px;
   width: 100%;
   float: left;
 }
@@ -99,41 +111,52 @@ height: auto;
 }
 
 #picCont1{
-  border: 1px solid;
+  background: white;
+/*  border: 1px solid;*/
   height: 530px;
   width: 600px;
   margin-top: 50px;
   float: left;
 }
 #userBx1{
-  border: 1px solid;
-  height: 80px;
+/*  border: 1px solid;*/
+  height: 30px;
   width: 80px;
+  margin-left: 5px;
+}
+#userText{
+  margin: 6px;
 }
 #picBx1{
   border: 1px solid;
-  height: 350px;
+  height: 390px;
   width: 100%;
 }
 .imgBxPic1{
-  height: 350px;
+  height: 390px;
   width: 100%;
 }
 #titleBx1{
-  border: 1px solid;
+  background: white;
   height: 20px;
   width: 60px;
   float: left;
 }
 #like1{
-  border: 1px solid;
+  background: white;
   height: 20px;
-  width: 20px;
+  width: 50px;
+  float: right;
+}
+#likeNum1{
+  background: tan;
+  height: 20px;
+  width: 50px;
   float: right;
 }
 #bodyBx1{
-  border: 1px solid;
-  height: 40px;
+/*  border: 1px solid;*/
+  height: 50px;
   width: 100%;
   float: left;
 }
@@ -141,6 +164,7 @@ height: auto;
   float: right;
 }
 #showComment{
+  background: whitesmoke;
   border: 1px solid;
   height: 200px;
   width: 50%;
