--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -15,8 +15,12 @@
   </div>
 
 </div>
+
+<!-- <div id="feedBx">
+  <p id="feed">Live Feed:</p>
+</div>
+ -->
 <div id="contentBx">
-    <p id="feed">Live Feed:</p>
     <div id="verticalBX">
   <% @photos.each do |photo| %>
 
