--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -12,7 +12,8 @@ body{
 
 
 body {
-    background-image: url("background1.png");
+    background-image: url(asset-path('background1.png'));
+
 }
 
 button {
